# telegram_auth_service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker_compose.yml
arch/: system.uml
backend/auth_service/: pyproject.toml
backend/auth_service/src/: main.py
backend/auth_service/src/api/v1/: __init__.py  auth.py  health.py
backend/auth_service/src/core/: logger.py  settings.py
backend/auth_service/src/db/object/: storage.py
backend/auth_service/src/db/redis/: storage.py
backend/auth_service/src/exception/: base.py  telegram.py
backend/auth_service/src/schema/auth/: __init__.py  send_code.py  step.py  validate_code.py  validate_password.py
backend/auth_service/src/service/auth/: __init__.py  send_code.py  validate_code.py  validate_password.py
backend/auth_service/src/service/auth/send_code/: __init__.py  facade.py
backend/auth_service/src/service/auth/send_code/connection_processing/entity/: __init__.py  connection.py
backend/auth_service/src/service/auth/send_code/connection_processing/provider/: __init__.py  exists.py  interface.py  new.py
backend/auth_service/src/service/crypt/: __init__.py  repository.py
backend/auth_service/src/service/telegram/client/: __init__.py  repository.py
backend/auth_service/src/service/telegram/client/check/: __init__.py  handler.py
backend/auth_service/src/service/telegram/client/create/: __init__.py  context.py  repository.py
backend/auth_service/src/service/telegram/client/entity/: client.py
backend/auth_service/src/service/telegram/client/provider/: __init__.py  protocol.py
(+28 files in other folders)
