[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "orjson>=3.11.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "telethon>=1.40.0",
    "uvicorn>=0.35.0",
]
